# deadbeatoy

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bootstrap.ps1  run.bat  run.sh
include/: aggregator.h  common.h  snatcher.h  transmitter.h  transmitter_manager.h
src/: CMakeLists.txt  aggregator.cpp  main.cpp  snatcher.cpp  snatcher_main.cpp  transmitter.cpp  transmitter_manager.cpp
test/: CMakeLists.txt  aggregator_test.cpp  snatcher_test.cpp  transmitter_manager_test.cpp  transmitter_test.cpp
